# roscopter

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  readme.txt
msg/: Attitude.msg  Control.msg  Mavlink_RAW_IMU.msg  State.msg  VFR_HUD.msg
nodes/: roscopter.py  roscopter_node.py
